--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
   },
   "rules": {
     "arrow-body-style": 0,
-    "arrow-parens": ["error", "always"],
+    "arrow-parens": ["error", "as-needed"],
     "class-methods-use-this": 0,
     "comma-dangle": ["error", "never"],
     "jsx-a11y/label-has-for": [0],
