--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
