--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.3.12",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
@@ -50,6 +53,7 @@
     "codeceptjs-puppeteer": "^1.3.0",
     "commander": "^2.18.0",
     "css-loader": "^1.0.0",
+    "dotenv": "^6.1.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.6.0",
