--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "supertest": "^3.3.0",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.8",
+    "webpack-merge": "^4.1.4"
   }
 }
