--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@babel/runtime": "^7.0.0",
     "@material-ui/core": "^3.4.0",
     "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
@@ -69,6 +72,8 @@
     "markdown-loader": "^4.0.0",
     "mocha": "^5.2.0",
     "mockdate": "^2.0.2",
+    "moxios": "^0.4.0",
+    "rosie": "^2.0.1",
     "sinon": "^6.3.3",
     "sinon-chai": "^3.2.0",
     "style-loader": "^0.23.0",
