--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
   "rules": {
     "arrow-body-style": 0,
     "arrow-parens": ["error", "as-needed"],
+    "no-underscore-dangle": ["error", { "allow": ["foo_", "_bar"] }],
     "class-methods-use-this": 0,
     "comma-dangle": ["error", "never"],
     "jsx-a11y/label-has-for": [0],
