--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.5",
+    "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.13",
     "styled-components": "^3.4.6"
@@ -53,7 +53,7 @@
     "babel-loader": "^8.0.2",
     "babel-plugin-styled-components": "^1.7.1",
     "chai": "^4.1.2",
-    "codeceptjs-puppeteer": "^1.3.0",
+    "codeceptjs": "^2.0.1",
     "commander": "^2.18.0",
     "css-loader": "^1.0.0",
     "dotenv": "^6.1.0",
@@ -73,6 +73,7 @@
     "mocha": "^5.2.0",
     "mockdate": "^2.0.2",
     "moxios": "^0.4.0",
+    "puppeteer": "^1.11.0",
     "rosie": "^2.0.1",
     "sinon": "^6.3.3",
     "sinon-chai": "^3.2.0",
@@ -80,7 +81,7 @@
     "supertest": "^3.3.0",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.4"
   }
 }
