feat: adds websocket connection for adding/updating cards

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/pink-dog-software/retroactive/issues"
   },
   "homepage": "https://github.com/pink-dog-software/retroactive#readme",
+  "scripts": {
+    "build": "webpack --config ./webpack/webpack.prod.config.js --mode production"
+  },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
@@ -39,6 +42,8 @@
     "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.13",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "styled-components": "^3.4.6"
   },
   "devDependencies": {
