wip: need to replace broken timer package

--- a/package.json
+++ b/package.json
@@ -31,17 +31,16 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.12",
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
+    "react-compound-timer": "^1.0.12",
     "react-dom": "^16.8.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.7",
     "redux-thunk": "^2.3.0",
-    "shortid": "^2.2.13",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "styled-components": "^3.4.6"
