--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
       "experimentalObjectRestSpread": true
     }
   },
+  "plugins": ["react-hooks"],
   "settings": {
     "import/resolver": {
       "webpack": {
