--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.12",
     "prop-types": "^15.6.2",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.7",
@@ -62,19 +62,19 @@
     "commander": "^2.18.0",
     "css-loader": "^1.0.0",
     "dotenv": "^6.1.0",
-    "enzyme": "^3.6.0",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.5.0",
-    "eslint": "^5.6.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
-    "markdown-loader": "^4.0.0",
     "mocha": "^5.2.0",
     "mockdate": "^2.0.2",
     "moxios": "^0.4.0",
@@ -84,9 +84,9 @@
     "sinon-chai": "^3.2.0",
     "style-loader": "^0.23.0",
     "supertest": "^3.3.0",
-    "webpack": "^4.19.0",
+    "webpack": "^4.30.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.1.4"
   }
 }
